@@ -1,5 +1,10 @@
 2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Tag plug-in hooks functions as exportable for Windows compatbility.
+	* src/roboptim-core-cfsqp-plugin.cc: Here.
+
+2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Change default iteration number.
 	* src/roboptim-core-cfsqp-plugin.cc: Here.
 	* tests/optimization-problem-1.stdout,
